--- a/Proyecto#1/index.html
+++ b/Proyecto#1/index.html
@@ -11,7 +11,7 @@
     <nav>
         <img src="logo N.png"class="logo"> 
         <div>
-          <a href="#"><img src="icono lenguaje.png" class="icono">Español<img src="flechita.png" class="flechita"></a>
+            <a href="#"><img src="icono lenguaje.png" class="icono">Español<img src="flechita.png" class="flechita"></a>
             <a href="#">Iniciar Sesión</a>
         </div>
     </nav>
@@ -23,6 +23,45 @@
       <input type="text" placeholder="Email" class="start-input">
       <button type="button" class="start-btn">Comenzar</button>
     </div>
+</div>
+<div class="parte2">
+  <main>
+    <div class="Tendencias">
+      <h3 class="sub-title">Tendencias</h3>
+    </div>
+  </main>
+  <img src="imagen-1.webp" width="240" height="">
+  <img src="imagen-4.webp" width="240" height="">
+  <img src="imagen-5.webp" width="240" height="">
+  <img src="imagen-8.webp" width="240" height="">
+  <img src="flecha.png"> 
+
+  <h3 class="sub-title">Más motivos para unirte</h3>
+  <div class="beneficios">
+  <div>
+<h3>Disfruta en tu TV</h3>
+<p>Ve en smart TV, PlayStation, Xbox, Chromecast, Apple TV, reproductores de Blu-ray y más</p>
+<img src="tv.png">
+  </div>
+  <div>
+<h3>Descarga tus series para verlas offline</h3>
+<p>Guarda tu contenido favorito y siempre tendrás algo para ver.</p>
+<img src="flecha abajo.png">
+  </div>
+  <div>
+<h3>Disfruta donde quieras</h3>
+<p>Películas y series ilimitadas en tu teléfono, tablet, laptop y TV.</p>
+<img src="globos.png">
+  </div>
+  <div>
+<h3>Crea perfiles para niños</h3>
+<p>Los niños vivirán aventuras con sus personajes favoritos en un espacio diseñado exclusivamente para ellos, gratis con tu membresía.</p>
+<img src="felizz.png">
+  </div>
+
+
+
+
 </div>
 
 
