--- a/Proyecto#1/index.html
+++ b/Proyecto#1/index.html
@@ -30,6 +30,7 @@
       <h3 class="sub-title">Tendencias</h3>
     </div>
   </main>
+
   <img src="imagen-1.webp" width="240" height="">
   <img src="imagen-4.webp" width="240" height="">
   <img src="imagen-5.webp" width="240" height="">
@@ -57,8 +58,25 @@
 <h3>Crea perfiles para niños</h3>
 <p>Los niños vivirán aventuras con sus personajes favoritos en un espacio diseñado exclusivamente para ellos, gratis con tu membresía.</p>
 <img src="felizz.png">
-  </div>
+   </div>
+</div>
 
+<main>
+    <div class="preguntas">
+      <h3 class="sub-title">Preguntas frecuentes</h3>
+    </div>
+  </main>
+  
+<div class="flex">
+  <div>¿Qué es Netflix?</div>
+  <div>¿Cuánto cuesta Netflix?</div>
+  <div>¿Dónde puedo ver Netflix?</div>
+  <div>¿Cómo cancelo?</div>
+  <div>¿Qué puedo ver en Netflix?</div>
+  <div>¿Es bueno Netflix para los niños?</div>
+
+</div>
+  
 
 
 
